--- a/index.html
+++ b/index.html
@@ -3,57 +3,105 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI Search Engine</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>SmartSeek AI</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb') no-repeat center center fixed;
+      background-size: cover;
+      color: black;
+    }
+
+    .search-box {
+      margin-top: 150px;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      width: 300px;
+      border-radius: 10px;
+      border: none;
+    }
+
+    button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 10px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+
+    .section {
+      margin-top: 30px;
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 20px;
+      border-radius: 10px;
+      width: 70%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .result-card {
+      margin-bottom: 20px;
+      padding: 10px;
+      border-bottom: 1px solid #ccc;
+      text-align: left;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1 class="logo">SmartSeek AI</h1>
-      <button id="themeToggle">🌙</button>
-    </header>
-
-    <main>
-      <form class="search-box">
-        <div class="search-wrapper">
-          <input type="text" id="searchInput" placeholder="Search with AI..." autocomplete="off" required />
-          <ul id="suggestionsList" class="suggestions"></ul>
-        </div>
-        <button type="submit">Search</button>
-        <div class="spinner" id="spinner"></div>
-      </form>
-    </main>
-
-    <footer>
-      <p>&copy; 2025 SmartSeek. All rights reserved.</p>
-    </footer>
+  <br><br><br><br>
+  <h1>SmartSeek AI</h1>
+  <div class="search-box">
+    <input type="text" id="searchInput" placeholder="Enter your query..." />
+    <button onclick="performSearch()">Search</button>
   </div>
-  <div id="loader" style="display:none">Searching...</div>
 
-  <script src="script.js"></script>
+  <div id="results-section" class="section" style="display: none;">
+    <h2>Search Results</h2>
+    <div id="results-container"></div>
+  </div>
+
+  <script>
+    function performSearch() {
+      const query = document.getElementById("searchInput").value.trim();
+      if (!query) return;
+
+      document.getElementById("results-container").innerHTML = "";
+      document.getElementById("results-section").style.display = "none";
+
+      fetch("/search", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+        },
+        body: JSON.stringify({ query }),
+      })
+      .then((response) => response.json())
+      .then((data) => {
+        const results = data.search_results || [];
+
+        if (results.length > 0) {
+          const resultContainer = document.getElementById("results-container");
+          results.forEach(item => {
+            const div = document.createElement("div");
+            div.className = "result-card";
+            div.innerHTML = `<strong>${item.category}</strong><p>${item.text}</p>`;
+            resultContainer.appendChild(div);
+          });
+        } else {
+          document.getElementById("results-container").innerHTML = "<p>No results found.</p>";
+        }
+
+        document.getElementById("results-section").style.display = "block";
+      })
+      .catch((error) => {
+        console.error("Error:", error);
+        alert("An error occurred while searching.");
+      });
+    }
+  </script>
 </body>
-
-<input type="text" id="query" placeholder="Enter search query">
-<button onclick="performSearch()">Search</button>
-<div id="results"></div>
-
-<script>
-function performSearch() {
-    const query = document.getElementById('query').value;
-
-    fetch('/search', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ query: query })
-    })
-    .then(response => response.json())
-    .then(data => {
-        const resultsDiv = document.getElementById('results');
-        resultsDiv.innerHTML = '';
-        data.forEach(item => {
-            resultsDiv.innerHTML += `<p><strong>${item.category}:</strong> ${item.text}</p>`;
-        });
-    });
-}
-</script>
 </html>
